--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/joy": "^5.0.0-beta.36",
     "@mui/material": "^5.15.15",
     "@reduxjs/toolkit": "^2.2.3",
+    "axios": "^1.6.8",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
